--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.1.0",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "web-vitals": "^1.1.2"
