--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "sass": "^1.35.1",
