--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,6 +14,7 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "history": "^5.0.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^17.0.2",
