--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mdi/js": "^5.9.55",
@@ -16,6 +17,7 @@
     "history": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "material-table": "^1.69.3",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
