--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.8.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -33,6 +34,7 @@
     "reselect": "^4.0.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
+    "tiny-slider-react": "^0.5.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
